@@ -11,6 +11,9 @@ Contributors (alphabetic order by last name):
    Neil Sainsbury <neil.sainsbury@gmail.com>
       - fixed several flaws in the .alx file generator
 
+   Phil Smith <phil.h.smith@gmail.com>
+      - added nopreverify switch to <rapc> task and updated documentation
+
    Marek Uhel <muhel@users.sourceforge.net>
       - fixed bug in <jadtool> task
 
